--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+
+        <section>
+            <p></p>
+        </section>
+
+        <section>
+            <p></p>
+        </section>
+
+        <section>
+            <p></p>
+        </section>
+
+        <section>
+            <p></p>
+        </section>
+
     </body>
 </html>
