--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js"></script>
+        <script src="script.js"></script>
     </head>
     <body>
 
