minor changes in HTML structure and CSS completion

--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
                         </div>
                     </article>
                 </div>
-
             </section>
 
         </main>
@@ -99,11 +98,11 @@
             <hr class="footer-separator">
             <br>
 
-            <section>
+            <section class="container">
                 <p>Made from scratch using help and learning materials from RevoU Fundamental Course</p>
             </section>
 
-            <section>
+            <section class="container">
                 <p>&copy; 2025 Steven C. All Rights Reserved.</p>
             </section>
 
